--- a/templates/blog/tags/sidebar.html
+++ b/templates/blog/tags/sidebar.html
@@ -104,7 +104,7 @@
             </div>
         </aside>
     {% endif %}
-    <aside id="text-2" class="widget widget_text"><p class="widget-title">欢迎您star或者fork本站源代码</p>
+    {% comment %} <aside id="text-2" class="widget widget_text"><p class="widget-title">欢迎您star或者fork本站源代码</p>
         <div class="textwidget">
 
             <p><a href="https://github.com/liangliangyy/DjangoBlog" rel="nofollow"><img
@@ -113,7 +113,7 @@
                     src="https://resource.lylinux.net/img.shields.io/github/forks/liangliangyy/djangoblog.svg?style=social&amp;label=Fork"
                     alt="GitHub forks"></a></p>
         </div>
-    </aside>
+    </aside> {% endcomment %}
 
     <aside id="meta-3" class="widget widget_meta"><p class="widget-title">功能</p>
         <ul>
